# RescueCred

./: .env.example  AGENTS.md  CLAIMS_FROM_RESULTS.md  MANIFEST.md  PAPER_PLAN.md  README.md  findings.md  pyproject.toml
.aris/: claims.json  evidence_precheck.json
configs/: api_bank.yaml  toy_mdp.yaml
docs/: APPWORLD_STAGE0_CN.md  DEPLOYABLE_HARNESS_STAGE1_CN.md  RESCUECREDIT_V2_IMPLEMENTATION_CN.md  ROUTE_A_APPWORLD_BOUNDED_CN.md  ROUTE_A_APPWORLD_DEV_EVAL_CN.md  ROUTE_A_APPWORLD_IMMEDIATE_CN.md  ROUTE_A_FROZEN_BANK_CN.md  ROUTE_A_SEED42_PREFERENCE_PILOT_CN.md  ROUTE_A_SHADOW_SMOKE_CN.md  TOOLSANDBOX_DELTAGUARD_CN.md  TOOLSANDBOX_SIGNAL_AUDIT_CN.md  reproducibility_checklist.md  rescue_event_schema.md
environments/: __init__.py
outputs/: PASTE_ON_SERVER_DEPLOYABLE_HARNESS.txt  PASTE_ON_SERVER_RESCUECREDIT_V2.txt  remote_appworld_v8_final_holdout_summary.json
refine-logs/: APPWORLD_MIGRATION_PLAN.md  APPWORLD_STAGE0_CODE_REVIEW.md  COMPENSATION_TRAP_CODE_REVIEW.md  COMPENSATION_TRAP_CODE_REVIEW_20260721_232708.md  COMPENSATION_TRAP_EXPERIMENT_PLAN.md  COMPENSATION_TRAP_EXPERIMENT_PLAN_20260721_230022.md  COMPENSATION_TRAP_EXPERIMENT_TRACKER.md  COMPENSATION_TRAP_EXPERIMENT_TRACKER_20260721_230022.md  COMPENSATION_TRAP_IMPLEMENTATION_RESULTS.md  COMPENSATION_TRAP_IMPLEMENTATION_RESULTS_20260721_232708.md  COUNTERFACTUAL_CREDIT_REPLAY_CODE_REVIEW.md  COUNTERFACTUAL_CREDIT_REPLAY_CODE_REVIEW_20260721_210431.md  COUNTERFACTUAL_CREDIT_REPLAY_IMPLEMENTATION_RESULTS.md  COUNTERFACTUAL_CREDIT_REPLAY_IMPLEMENTATION_RESULTS_20260721_210431.md  EDITCREDIT_CODE_REVIEW.md  (+125 more)
(+404 files in other folders)
